// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Default 1`] = `
<div>
  <button
    className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Modal Modal Parts 1`] = `
<div>
  <button
    className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Modal without footer
    </span>
  </button>
  <button
    className="borrow-ui__button  borrow-ui__button--primary-reverse borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Modal with footer
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Modal Modal Size 1`] = `
<div>
  <button
    className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Initial 400 x 300
    </span>
  </button>
  <button
    className="borrow-ui__button  borrow-ui__button--primary-reverse borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Initial 50% x 300
    </span>
  </button>
  <button
    className="borrow-ui__button  borrow-ui__button--primary-reverse borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Maximized
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Modal closeOnEscape false 1`] = `
<div>
  <button
    className="borrow-ui__button  borrow-ui__button--primary borrow-ui__button--normal borrow-ui__button--shadowed borrow-ui__button--separated "
    onClick={[Function]}
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;
